--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f9fa;
+    background: radial-gradient(circle at 7.5% 24%, rgb(237, 161, 193) 0%, rgb(250, 178, 172) 25.5%, rgb(190, 228, 210) 62.3%, rgb(215, 248, 247) 93.8%);;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
